--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "hul",
   "version": "1.0.0",
   "description": "front-work",
-  "main": "index.js",
+  "main": "index.html",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "lite-server",
