--- a/package.json
+++ b/package.json
@@ -1,26 +1,48 @@
 {
-  "name": "hul",
-  "version": "1.0.0",
-  "description": "personal website",
-  "main": "index.html",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "lite-server",
-    "sass": "sass ./assets/css/styles.scss ./assets/css/styles.css -w"
-  },
-  "keywords": [
-    "lule",
-    "moses"
-  ],
-  "author": "lule moses",
-  "license": "ISC",
+  "name": "moses-lule",
+  "version": "0.1.0",
+  "homepage": "https://lulemoses67.github.io/lulemoses.github.io",
+  "private": true,
   "dependencies": {
-    "font-awesome": "^4.7.0",
-    "handlebars": "^4.7.7",
-    "jquery": "^3.6.0",
-    "sass": "^1.47.0"
+    "@fortawesome/fontawesome-free": "^6.2.1",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^13.0.0",
+    "@testing-library/user-event": "^13.2.1",
+    "gh-pages": "^4.0.0",
+    "react": "^18.2.0",
+    "react-auto-typing": "^1.0.0",
+    "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
+    "react-router-dom": "^6.4.3",
+    "react-scripts": "5.0.1",
+    "redux": "^4.2.0",
+    "sass": "^1.56.1",
+    "web-vitals": "^2.1.0"
   },
-  "devDependencies": {
-    "lite-server": "^2.6.1"
+  "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
